--- a/screens/dashboard.ejs
+++ b/screens/dashboard.ejs
@@ -12,7 +12,7 @@
 <body>
     <h2>Welcome to the Dashboard</h2>
     <p>Hello, <%= username %>!</p>
-    <a href="/logout">Logout</a>
+    <a href="/logout">Logogut</a>
 
     <div>
       <button class="button" onclick="openPopup()">Add Task</button>
